syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.via.nbnp.databaseserver.protobuf";

service NotificationService{
  rpc getNotificationsByUser(SearchNotificationDTO) returns (stream Notification);
}

message SearchNotificationDTO{
  int64 id = 1;
}

message Notification {
  int64 id = 1;
  int64 userId = 2;
  string message = 3;
  string title = 4;
  string notificationType = 5;
  int64 notificationTypeId = 6;
}